syntax = "proto3";

package example.v1;

option java_multiple_files = true;
option java_outer_classname = "UserProto";
option java_package = "com.example.protos.v1";

// User represents a system user
message User {
  string id = 1;
  string name = 2;
  string email = 3;

  repeated Address addresses = 4;

  enum Status {
    STATUS_UNSPECIFIED = 0;
    ACTIVE = 1;
    INACTIVE = 2;
    SUSPENDED = 3;
  }

  Status status = 5;

  oneof profile {
    PersonalProfile personal = 6;
    BusinessProfile business = 7;
  }
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip_code = 4;
  string country = 5;
}

message PersonalProfile {
  string date_of_birth = 1;
  repeated string hobbies = 2;
}

message BusinessProfile {
  string company_name = 1;
  string position = 2;
  string department = 3;
}

// UserList contains multiple users
message UserList {
  repeated User users = 1;
  int32 total_count = 2;
}
